--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit
-PyMuPDF
-pdf2image
-pytesseract
-pillow
-pdfplumber
+streamlit 
+pymupdf 
+pdfplumber 
+pytesseract 
+pillow 
+rapidfuzz 
+openai 
+transformers 
+torch
